--- a/tmux.conf
+++ b/tmux.conf
@@ -156,8 +156,8 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 bind-key Escape send-keys C-l
 
 # jump between panes
-# complement o with O
-bind-key O select-pane -t :.-
+bind-key Tab select-pane -t :.+
+bind-key BTab select-pane -t :.-
 
 unbind :
 bind-key \; command-prompt
@@ -168,8 +168,17 @@ bind-key * set-window-option synchronize-pane
 
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
-bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind-key @ command-prompt -p "send pane to:"  "join-pane -t '%%'"
+# bind-key j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
+bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
+
+# Marked pane must be present (prefix-m), for the j and r bindings.
+# The marked pane will be used as -s src-pane, whereas -t dst-pane is active
+# pane
+bind-key j join-pane
+bind-key r swap-pane
+
+# The only pane
+bind-key o break-pane
 
 # resize panes using PREFIX arrows
 bind-key -r Left resize-pane -L 4
@@ -177,8 +186,9 @@ bind-key -r Right resize-pane -R 4
 bind-key -r Down resize-pane -D 4
 bind-key -r Up resize-pane -U 4
 
-bind-key M-h select-layout main-horizontal
-bind-key M-v select-layout main-vertical
+bind-key M-v select-layout even-horizontal
+bind-key M-h select-layout even-vertical
+bind-key M-n next-layout
 
 bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
