--- a/tmux.conf
+++ b/tmux.conf
@@ -107,7 +107,7 @@ bind-key -r < swap-window -t :-
 bind-key T swap-window -t 1
 
 # shortcut for reloading config
-bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
+bind-key ! source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -176,6 +176,8 @@ bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 # pane
 bind-key j join-pane
 bind-key r swap-pane
+
+bind-key R refresh-client
 
 # The only pane
 bind-key o break-pane
