T open pane in new window

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,7 +31,7 @@ set-option -g xterm-keys on
 
 # Before disabling following option,
 # make sure you have the "Applications in terminal may access clipboard" option set when using iTerm2
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 # escape delay
 set-option -sg escape-time 1
@@ -106,7 +106,7 @@ bind-key '"' split-window -c "#{pane_current_path}"
 bind-key -r > swap-window -t :+
 bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key T swap-window -t 1
+bind-key 0 swap-window -t 1
 
 # shortcut for reloading config
 bind-key ! source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
@@ -185,8 +185,8 @@ bind-key r swap-pane
 
 bind-key R refresh-client
 
-# The only pane
-bind-key o break-pane
+# Move pane to new Tab(window)
+bind-key T break-pane
 
 # resize panes using PREFIX arrows
 bind-key -r Left resize-pane -L 4
@@ -198,7 +198,7 @@ bind-key M-v select-layout even-horizontal
 bind-key M-h select-layout even-vertical
 bind-key M-n next-layout
 
-bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
+# bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
 # https://github.com/seebi/tmux-colors-solarized
 if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
