--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@
 # https://github.com/tmux/tmux/blob/master/FAQ
 # https://robots.thoughtbot.com/love-hate-tmux
 # https://gist.github.com/MohamedAlaa/2961058
+# https://github.com/tmux-plugins/tmux-sensible
 
 # Hierarchy:
 #  Server
@@ -31,14 +32,20 @@ set-option -g xterm-keys on
 
 # Before disabling following option,
 # make sure you have the "Applications in terminal may access clipboard" option set when using iTerm2
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
-# escape delay
-set-option -sg escape-time 1
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+set-option -s escape-time 0
+
+# increase scrollback buffer size
+set-option -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+set-option -g display-time 4000
 
 # Update the status bar every sixty seconds
 # devault value is 15
-set-option -g status-interval 30
+set-option -g status-interval 10
 
 # Unbind C-b (the default prefix)
 unbind-key C-b
@@ -46,9 +53,13 @@ unbind-key C-b
 # http://superuser.com/a/178223/578741
 set-option -g prefix C-Space
 
-# Use vi keybindings for tmux commandline input.
-# Note that to get command mode you need to hit ESC twice...
-set-option -g status-keys vi
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set-option -g status-keys emacs
+
+# requires by 'roxma/vim-tmux-clipboard'
+# focus events enabled for terminals that support them
+set-option -g focus-events on
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set-option -g base-index 1
@@ -65,10 +76,8 @@ set-option -g mouse on
 # remove administrative debris (session name, hostname, time) in status bar
 # set -g status-left ''
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
-set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
-
-# requires by 'roxma/vim-tmux-clipboard'
-set-option -g focus-events on
+# set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
+set-option -g status-right '#{prefix_highlight} | #(xkbswitch -ge) | %a %d-%m-%Y %H:%M'
 
 # -------------------------------------------------------------------
 # Window options
@@ -78,9 +87,7 @@ set-window-option -g mode-keys vi
 
 set-window-option -g pane-base-index 1
 
-# Rather than constraining window size to the maximum size of any client
-# connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
+# super useful when using "grouped sessions" and multi-monitor setup
 set-window-option -g aggressive-resize on
 
 # visual notification of activity in other windows
@@ -144,17 +151,6 @@ bind-key h previous-window\; refresh-client -S
 unbind n
 bind-key u next-window\; refresh-client -S
 
-# Smart pane switching with awareness of vim splits
-# https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-bind-key -n C-l send-keys 'C-c'
-
 # send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
@@ -178,8 +174,7 @@ bind-key * set-window-option synchronize-pane
 bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 
 # Marked pane must be present (prefix-m), for the j and r bindings.
-# The marked pane will be used as -s src-pane, whereas -t dst-pane is active
-# pane
+# The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
 bind-key j join-pane
 bind-key r swap-pane
 
@@ -202,3 +197,11 @@ bind-key M-n next-layout
 
 # https://github.com/seebi/tmux-colors-solarized
 if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'vbauerster/vim-tmux-navigator'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
