--- a/tmux.conf
+++ b/tmux.conf
@@ -183,11 +183,12 @@ bind-key R refresh-client
 # Move pane to new Tab(window)
 bind-key T break-pane
 
-# resize panes using PREFIX arrows
-bind-key -r Left resize-pane -L 4
-bind-key -r Right resize-pane -R 4
-bind-key -r Down resize-pane -D 4
-bind-key -r Up resize-pane -U 4
+# resize panes using PREFIX + shift + [hjkc]
+# https://github.com/tmux-plugins/tmux-pain-control
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r C resize-pane -R 5
 
 bind-key M-v select-layout even-horizontal
 bind-key M-h select-layout even-vertical
@@ -202,6 +203,10 @@ if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-2
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'vbauerster/vim-tmux-navigator'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'thalesmello/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
