Esc = switch to last session; Enter = clear scr

--- a/tmux.conf
+++ b/tmux.conf
@@ -155,7 +155,12 @@ bind-key u next-window\; refresh-client -S
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 
-bind-key Escape send-keys C-l
+# Restoring Clear Screen (C-l)
+bind-key Enter send-keys C-l
+
+# Switch to last session
+unbind L
+bind-key Escape switch-client -l
 
 # jump between panes
 bind-key Tab select-pane -t :.+
@@ -206,7 +211,8 @@ set -g @plugin 'vbauerster/vim-tmux-navigator'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @plugin 'jbnicolai/tmux-fpp'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
