--- a/tmux.conf
+++ b/tmux.conf
@@ -201,13 +201,11 @@ bind-key M-n next-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-# https://github.com/seebi/tmux-colors-solarized
-if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'vbauerster/vim-tmux-navigator'
+set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
