Invert for PDvorak

--- a/tmux.conf
+++ b/tmux.conf
@@ -113,10 +113,26 @@ bind-key '"' split-window -c "#{pane_current_path}"
 bind-key -r > swap-window -t :+
 bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
-bind-key 0 swap-window -t 1
+bind-key : swap-window -t 1
+
+bind-key 7 switch-client -p
+bind-key 6 switch-client -n
+bind-key 5 swap-pane -U
+bind-key 3 swap-pane -D
+bind-key * choose-buffer
+
+bind-key ( select-window -t :=1
+bind-key ) select-window -t :=2
+bind-key } select-window -t :=3
+bind-key + select-window -t :=4
+bind-key { select-window -t :=5
+bind-key ] select-window -t :=6
+bind-key [ select-window -t :=7
+bind-key ! select-window -t :=8
+bind-key = select-window -t :=9
 
 # shortcut for reloading config
-bind-key ! source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
+bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
 
 # fzf-locate
 # https://github.com/junegunn/fzf/wiki/Examples-(tmux)
@@ -166,12 +182,11 @@ bind-key Escape switch-client -l
 bind-key Tab select-pane -t :.+
 bind-key BTab select-pane -t :.-
 
-unbind :
 bind-key \; command-prompt
 
 # Synchronize panes
 # https://sanctum.geek.nz/arabesque/sync-tmux-panes/
-bind-key * set-window-option synchronize-pane
+bind-key 0 set-window-option synchronize-pane
 
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
@@ -182,8 +197,6 @@ bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
 bind-key j join-pane
 bind-key r swap-pane
-
-bind-key R refresh-client
 
 # Move pane to new Tab(window)
 bind-key T break-pane
