prefer choose-buffer to paste-buffer

--- a/tmux.conf
+++ b/tmux.conf
@@ -154,15 +154,10 @@ bind -Tcopy-mode-vi Space send -X halfpage-down
 bind -Tcopy-mode-vi Bspace send -X halfpage-up
 
 bind-key - copy-mode
-bind-key p paste-buffer
 
 # switch to last window
 unbind l
-bind-key Space last-window\; refresh-client -S
-
-bind-key h previous-window\; refresh-client -S
-unbind n
-bind-key u next-window\; refresh-client -S
+bind-key Space last-window
 
 # send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
