--- a/tmux.conf
+++ b/tmux.conf
@@ -116,8 +116,8 @@ bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key : swap-window -t 1
 
-bind-key 1 switch-client -p
-bind-key 2 switch-client -n
+bind-key p switch-client -p
+bind-key g switch-client -n
 bind-key 5 swap-pane -U
 bind-key 3 swap-pane -D
 bind-key * choose-buffer
@@ -159,16 +159,19 @@ bind-key - copy-mode
 unbind l
 bind-key Space last-window
 
+bind-key h previous-window
+bind-key u next-window
+
 # send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
 bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 
 # Restoring Clear Screen (C-l)
-bind-key Enter send-keys C-l
+bind-key Escape send-keys C-l
 
 # Switch to last session
 unbind L
-bind-key Escape switch-client -l
+bind-key n switch-client -l
 
 # jump between panes
 bind-key Tab select-pane -t :.+
