vim-tmux-navigator with custom overrides

--- a/tmux.conf
+++ b/tmux.conf
@@ -212,8 +212,8 @@ bind-key M-n next-layout
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'vbauerster/vim-tmux-navigator'
-set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'thalesmello/tmux-copycat'
 # set -g @plugin 'tmux-plugins/tmux-open'
@@ -222,3 +222,10 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# override vim-tmux-navigator "C-c" > "C-l"
+bind-key -n C-l send-keys "C-c"
+bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+
+# if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
+source ~/dotfiles/tmuxcolors-light.conf
