--- a/tmux.conf
+++ b/tmux.conf
@@ -212,7 +212,6 @@ bind-key M-n next-layout
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'thalesmello/tmux-copycat'
@@ -223,9 +222,21 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# override vim-tmux-navigator "C-c" > "C-l"
-bind-key -n C-l send-keys "C-c"
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-c if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-c select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+bind-key -n C-l send-keys "C-c"
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
 source ~/dotfiles/tmuxcolors-light.conf
