--- a/tmux.conf
+++ b/tmux.conf
@@ -122,13 +122,24 @@ bind-key 5 swap-pane -U
 bind-key 3 swap-pane -D
 bind-key * choose-buffer
 
+# brackets layout
+# bind-key ( select-window -t :=1
+# bind-key ) select-window -t :=2
+# bind-key ] select-window -t :=3
+# bind-key + select-window -t :=4
+# bind-key [ select-window -t :=5
+# bind-key } select-window -t :=6
+# bind-key { select-window -t :=7
+# bind-key ! select-window -t :=8
+# bind-key = select-window -t :=9
+
 bind-key ( select-window -t :=1
 bind-key ) select-window -t :=2
-bind-key ] select-window -t :=3
+bind-key } select-window -t :=3
 bind-key + select-window -t :=4
-bind-key [ select-window -t :=5
-bind-key } select-window -t :=6
-bind-key { select-window -t :=7
+bind-key { select-window -t :=5
+bind-key ] select-window -t :=6
+bind-key [ select-window -t :=7
 bind-key ! select-window -t :=8
 bind-key = select-window -t :=9
 
