join-pane with mark only

--- a/tmux.conf
+++ b/tmux.conf
@@ -197,9 +197,9 @@ bind-key 0 set-window-option synchronize-pane
 # pane movement
 # http://unix.stackexchange.com/questions/14300/moving-tmux-pane-to-window
 # bind-key j command-prompt -p "join pane from:"  "join-pane -s ':%%'"
-bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
+# bind-key @ command-prompt -p "send pane to:"  "join-pane -t ':%%'"
 
-# Marked pane must be present (prefix-m), for the j and r bindings.
+# Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
 bind-key j join-pane
 bind-key r swap-pane
