join/swap last active pane/window

--- a/tmux.conf
+++ b/tmux.conf
@@ -202,7 +202,11 @@ bind-key 0 set-window-option synchronize-pane
 # Marked pane must be present (prefix-m), for the following to work
 # The marked pane will be used as -s src-pane, whereas -t dst-pane is active pane
 bind-key j join-pane
-bind-key r swap-pane
+
+# join the last active pane/window to the current window.
+bind-key @ join-pane -s !
+# swap the last active pane/window with the current window.
+bind-key r swap-pane -s !
 
 # Move pane to new Tab(window)
 bind-key T break-pane
