display-panes-time 3s

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,9 @@ set-option -g history-limit 50000
 # tmux messages are displayed for 3 seconds
 set-option -g display-time 3000
 
-# Update the status bar every sixty seconds
+set-option -g display-panes-time 3000
+
+# Update the status line every interval seconds
 # devault value is 15
 set-option -g status-interval 10
 
