gruvbox light theme friendly colors

--- a/tmuxcolors-light.conf
+++ b/tmuxcolors-light.conf
@@ -1,34 +1,36 @@
-#### COLOUR (atom light)
+# colour244 = dim gray
+# colour144 = dim green (haki)
+# colour229 = bright yellow
 
 # default statusbar colors
-set-option -g status-bg default
-set-option -g status-fg colour244
-set-option -g status-attr default
+set-option -g status-style "bg=black,fg=colour244"
+
+# %if #{==:#{host},myhost}}
+# set-option -s status-bg yellow
+# %endif
 
 # default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg colour255
-# set-window-option -g window-status-attr dim
+set-window-option -g window-status-style "bg=colour144,fg=black"
 
-# active window title colors
-set-window-option -g window-status-current-fg colour255
-set-window-option -g window-status-current-bg green
-# set-window-option -g window-status-current-attr bright
+# currently active window
+set-window-option -g window-status-current-style "bg=green,fg=black"
+
+# windows with an activity alert
+set-window-option -g window-status-activity-style "bg=colour144,fg=colour229,italics"
+
+# bell
+set-window-option -g window-status-bell-style "bg=red,fg=black"
 
 # pane border
 set-option -g pane-border-fg white
-set-option -g pane-active-border-fg brightcyan
+set-option -g pane-active-border-fg green
 
 # message text
-set-option -g message-bg colour229
-set-option -g message-fg brightred
+set-option -g message-style "bg=colour229,fg=brightred"
 
 # pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
+set-option -g display-panes-active-colour green
+set-option -g display-panes-colour white
 
 # clock
-set-window-option -g clock-mode-colour green #green
-
-# bell
-set-window-option -g window-status-bell-style fg=white,bg=red #base2, red
+# set-window-option -g clock-mode-colour green
