why use xterm-keys comment

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,8 @@ set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # <S-Home><S-End>
 set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
+
+# Use xterm keycodes for Shift-F1 etc (for Vim).
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
 
