tmux default-terminal = custom screen-256color

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,13 +23,14 @@
 # -------------------------------------------------------------------
 # Session options
 # -------------------------------------------------------------------
-# ~/dotfiles/resources/tmux-256color.terminfo
-set-option -g default-terminal "tmux-256color"
+# ~/dotfiles/resources/screen-256color.terminfo
+set-option -g default-terminal "screen-256color"
 # improve colors
 # https://wiki.archlinux.org/index.php/Tmux#24-bit_color
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set-option -ga terminal-overrides ",*:Tc"
+
 # <S-Home><S-End>
-set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
+# set-option -ga terminal-overrides ',xterm-256color:kEND=\E[F:kHOM=\E[H'
 
 # Use xterm keycodes for Shift-F1 etc (for Vim).
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
