--- a/tmux.conf
+++ b/tmux.conf
@@ -85,7 +85,8 @@ set-option -g mouse on
 # set -g status-left ''
 # set -g status-right '#[bold]#(xkbswitch -ge) ● #H#[default] '
 # set-option -g status-right "#(xkbswitch -ge) ● #(date '+%a, %b %d - %H:%M')"
-set-option -g status-right '#{prefix_highlight} | #(xkbswitch -ge) | %a %d-%m-%Y %H:%M'
+# set-option -g status-right '#{prefix_highlight} | #(xkbswitch -ge) | %a %d-%m-%Y %H:%M'
+set -g status-right '#{prefix_highlight}#{cpu_bg_color}#{cpu_fg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 
 # -------------------------------------------------------------------
 # Window options
@@ -231,19 +232,6 @@ bind-key M-n next-layout
 
 # bind-key e send "V" C-m "nvim " \; paste-buffer \; send C-m
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @plugin 'tmux-plugins/tmux-copycat'
-# set -g @plugin 'thalesmello/tmux-copycat'
-# set -g @plugin 'tmux-plugins/tmux-open'
-# set -g @plugin 'tmux-plugins/tmux-sidebar'
-# set -g @plugin 'jbnicolai/tmux-fpp'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -262,3 +250,21 @@ bind-key -n C-l send-keys "C-c"
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
 source ~/dotfiles/tmuxcolors-light.conf
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'tmux-plugins/tmux-copycat'
+# set -g @plugin 'thalesmello/tmux-copycat'
+# set -g @plugin 'tmux-plugins/tmux-open'
+# set -g @plugin 'tmux-plugins/tmux-sidebar'
+# set -g @plugin 'jbnicolai/tmux-fpp'
+
+set -g @cpu_low_fg_color "#[fg=black]"
+set -g @cpu_medium_fg_color "#[fg=black]"
+set -g @cpu_high_fg_color "#[fg=black]"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
