--- a/tmuxcolors-light.conf
+++ b/tmuxcolors-light.conf
@@ -1,9 +1,9 @@
 # colour244 = dim gray
 # colour144 = dim green (haki)
-# colour229 = bright yellow
+# colour230 = bright yellow
 
 # default statusbar colors
-set-option -g status-style "bg=black,fg=colour244"
+set-option -g status-style "bg=colour230,fg=colour244"
 
 # %if #{==:#{host},myhost}}
 # set-option -s status-bg yellow
@@ -16,7 +16,7 @@ set-window-option -g window-status-style "bg=colour144,fg=black"
 set-window-option -g window-status-current-style "bg=green,fg=black"
 
 # windows with an activity alert
-set-window-option -g window-status-activity-style "bg=colour144,fg=colour229,italics"
+set-window-option -g window-status-activity-style "bg=colour144,fg=colour230,italics"
 
 # bell
 set-window-option -g window-status-bell-style "bg=red,fg=black"
@@ -26,7 +26,7 @@ set-option -g pane-border-fg white
 set-option -g pane-active-border-fg green
 
 # message text
-set-option -g message-style "bg=colour229,fg=brightred"
+set-option -g message-style "bg=colour230,fg=brightred"
 
 # pane number display
 set-option -g display-panes-active-colour green
