default status-interval

--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ set-option -g display-panes-time 3000
 
 # Update the status line every interval seconds
 # devault value is 15
-set-option -g status-interval 10
+# set-option -g status-interval 10
 
 # Unbind C-b (the default prefix)
 unbind-key C-b
