automatic-rename-format

--- a/tmux.conf
+++ b/tmux.conf
@@ -105,6 +105,8 @@ set-window-option -g monitor-activity on
 
 # auto rename
 # set-window-option -g automatic-rename on
+# https://unix.stackexchange.com/questions/235272/format-tmuxs-pane-current-path/393072#393072
+set-window-option -g automatic-rename-format "#{b:pane_current_path}"
 
 # -------------------------------------------------------------------
 # Key bindings
