--- a/tmux.conf
+++ b/tmux.conf
@@ -36,9 +36,8 @@ set-option -ga terminal-overrides ",*:Tc"
 # https://wiki.archlinux.org/index.php/Tmux#xterm-keys
 set-option -g xterm-keys on
 
-# Before disabling following option,
-# make sure you have the "Applications in terminal may access clipboard" option set when using iTerm2
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8
+source -q ~/dotfiles/tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -s escape-time 0
