Suppress source error messages

--- a/tmux.conf
+++ b/tmux.conf
@@ -250,7 +250,7 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 bind-key -n C-l send-keys "C-c"
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source ~/dotfiles/tmuxcolors-light.conf
+source -q ~/dotfiles/tmuxcolors-light.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
