--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,7 @@ set-option -ga terminal-overrides ",*:Tc"
 set-option -g xterm-keys on
 
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/8
-source -q ~/dotfiles/tmux-osx.conf
+source-file -q ~/dotfiles/tmux-osx.conf
 
 # address vim mode switching delay (http://superuser.com/a/252717/65504)
 set-option -s escape-time 0
@@ -250,7 +250,7 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 bind-key -n C-l send-keys "C-c"
 
 # if-shell "[ -f $DOTFILES/.tmuxcolors-256.conf ]" 'source $DOTFILES/.tmuxcolors-256.conf'
-source -q ~/dotfiles/tmuxcolors-light.conf
+source-file -q ~/dotfiles/tmuxcolors-light.conf
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
