--- a/tmux.conf
+++ b/tmux.conf
@@ -105,7 +105,9 @@ set-window-option -g monitor-activity on
 # auto rename
 # set-window-option -g automatic-rename on
 # https://unix.stackexchange.com/questions/235272/format-tmuxs-pane-current-path/393072#393072
-set-window-option -g automatic-rename-format "#{b:pane_current_path}"
+# The default  window-status-format is `#I:#W#F'
+# set-window-option -g automatic-rename-format "#{b:pane_current_path}"
+set-window-option -g automatic-rename-format "#{b:pane_title}"
 
 # -------------------------------------------------------------------
 # Key bindings
