--- a/tmux.conf
+++ b/tmux.conf
@@ -127,11 +127,16 @@ bind-key -r < swap-window -t :-
 # http://superuser.com/questions/343572/how-do-i-reorder-tmux-windows
 bind-key : swap-window -t 1
 
-bind-key p switch-client -p
-bind-key g switch-client -n
+# Switch to last session
+unbind L
+bind-key n switch-client -l
+bind-key 1 switch-client -p
+bind-key 2 switch-client -n
+
+# swap the last active pane/window with the current window.
+bind-key r swap-pane -s !
 bind-key 5 swap-pane -U
 bind-key 3 swap-pane -D
-bind-key * choose-buffer
 
 # brackets layout
 # bind-key ( select-window -t :=1
@@ -153,6 +158,7 @@ bind-key ] select-window -t :=6
 bind-key [ select-window -t :=7
 bind-key ! select-window -t :=8
 bind-key = select-window -t :=9
+bind-key * choose-buffer
 
 # shortcut for reloading config
 bind-key R source-file ~/.tmux.conf \; display-message "[tmux] reloaded"
@@ -191,10 +197,6 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 # Restoring Clear Screen (C-l)
 bind-key Escape send-keys C-l
 
-# Switch to last session
-unbind L
-bind-key n switch-client -l
-
 # jump between panes
 bind-key Tab select-pane -t :.+
 bind-key BTab select-pane -t :.-
@@ -216,8 +218,6 @@ bind-key j join-pane
 
 # join the last active pane/window to the current window.
 bind-key @ join-pane -s !
-# swap the last active pane/window with the current window.
-bind-key r swap-pane -s !
 
 # Move pane to new Tab(window)
 bind-key T break-pane
