p/g previous/next window

--- a/tmux.conf
+++ b/tmux.conf
@@ -187,8 +187,9 @@ bind-key - copy-mode
 unbind l
 bind-key Space last-window
 
-bind-key h previous-window
-bind-key u next-window
+# bind-key h previous-window
+# mnemonic ng
+bind-key g next-window
 
 # send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
