u/h select-pane -t -/+; o = display-panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -194,6 +194,7 @@ bind-key Space last-window
 # bind-key h previous-window
 # mnemonic ng
 bind-key g next-window
+bind-key p previous-window
 
 # send prefix key, if not in vim
 # <C-Space><C-Space> (whithout depressing ctrl)
@@ -203,8 +204,11 @@ bind-key C-Space if-shell "$is_vim" "send-keys C-Space" "send-prefix"
 bind-key Escape send-keys C-l
 
 # jump between panes
-bind-key Tab select-pane -t :.+
-bind-key BTab select-pane -t :.-
+bind-key h select-pane -t :.-
+bind-key u select-pane -t :.+
+
+# default: o = select-pane -t :.+
+bind-key o display-panes
 
 bind-key \; command-prompt
 
